[FIX] sap.m.Label: color edited to have contrast when used inside Toolbar and Overflowtoolbar
BCP: 2170321978

--- a/src/sap.m/src/sap/m/themes/base/Label.less
+++ b/src/sap.m/src/sap/m/themes/base/Label.less
@@ -81,6 +81,10 @@ html[dir="ltr"] .sapMLabel[dir="rtl"].sapMLabelRequired .sapMLabelColonAndRequir
 	color: @sapUiPageFooterTextColor;
 }
 
+.sapMTB-Info-CTX.sapMTB.sapMTBInactive .sapMLabel {
+	color: @sapUiListTextColor;
+}
+
 /* Toolbar overflow context */
 .sapMOverflowToolbarMenu-CTX {
 	.sapMLabel {
